<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/act_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/act_statistic"
        android:icon="@drawable/ic_outline_equalizer_24"
        android:title="@string/statistic"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/act_choice_date"
        android:icon="@drawable/ic_outline_event_note_24"
        android:title="@string/change_date"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/act_logout"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>