<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TransactionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_trans_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_trans_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trans_name"
                android:inputType="textCapSentences"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_trans_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="0.4"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/lay_trans_date"
            app:layout_constraintTop_toBottomOf="@id/lay_trans_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_trans_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_trans_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="0.6"
            app:layout_constraintTop_toBottomOf="@id/lay_trans_name"
            app:layout_constraintLeft_toRightOf="@id/lay_trans_amount"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_trans_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trans_date"
                android:inputType="datetime"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/grp_rad_trans_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lay_trans_amount"
            app:layout_constraintLeft_toLeftOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbl_trans_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_type"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="4dp"/>

            <RadioButton
                android:id="@+id/rad_trans_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_in"/>
            <RadioButton
                android:id="@+id/rad_trans_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trans_out"
                android:checked="true"/>
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lay_trans_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/grp_rad_trans_type"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_trans_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/trans_desc"
                android:minLines="3"
                android:gravity="top"
                android:inputType="textCapSentences|textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>